--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,39 @@
 [pushgateway]
 host = "http://192.168.30.77:9091"
 
+# [[targets]]
+# name = "postgresql"
+# host = "192.168.30.171"
+# keypath = "/home/brun0/.ssh/id_ed25519_postgresql"
+# instance = "brun0:postgresql"
+
+# [[targets]]
+# name = "gokr_perm"
+# instance = "brun0:gokr_perm"
+
+
+# [[targets]]
+# name = "syncthing"
+# host = "192.168.30.36"
+# keypath = "/home/brun0/.ssh/id_ed25519_syncthing"
+# instance = "brun0:syncthing"
+
+# [[targets]]
+# name = "leaks"
+# host = "192.168.30.3"
+# keypath = "/home/brun0/.ssh/id_ed25519_proxmox"
+# instance = "brun0:leaks"
+
+# [[targets]]
+# name = "monitoring"
+# host = "192.168.30.77"
+# keypath = "/home/brun0/.ssh/id_ed25519_monitoring"
+# instance = "brun0:monitoring"
+
 [[targets]]
 name = "postgresql"
 host = "192.168.30.171"
-keypath = "/home/brun0/.ssh/id_ed25519_postgresql"
+keypath = "/root/.ssh/id_ed25519_postgresql_backup"
 instance = "brun0:postgresql"
 
 [[targets]]
@@ -15,11 +44,15 @@ instance = "brun0:gokr_perm"
 [[targets]]
 name = "syncthing"
 host = "192.168.30.36"
-keypath = "/home/brun0/.ssh/id_ed25519_syncthing"
+keypath = "/root/.ssh/id_ed25519_syncthing_backup"
 instance = "brun0:syncthing"
 
 [[targets]]
 name = "leaks"
-host = "192.168.30.3"
-keypath = "/home/brun0/.ssh/id_ed25519_proxmox"
 instance = "brun0:leaks"
+
+[[targets]]
+name = "monitoring"
+host = "192.168.30.77"
+keypath = "/root/.ssh/id_ed25519_monitoring"
+instance = "brun0:monitoring"
