--- a/config.toml
+++ b/config.toml
@@ -1,36 +1,11 @@
+[nas]
+name = "nas1"
+ip = "192.168.30.200"
+mac = "9c:6b:00:07:bc:85"
+
 [pushgateway]
 host = "http://192.168.30.77:9091"
 
-[[targets]]
-name = "postgresql"
-host = "192.168.30.171"
-keypath = "/root/.ssh/id_ed25519_postgresql_backup"
-instance = "brun0:postgresql"
-external_path = "/mnt/pve/external/postgresql_backup"
-
-[[targets]]
-name = "gokr_perm"
-instance = "brun0:gokr_perm_waiw"
-external_path = "/mnt/pve/external/gokrazy_backup"
-
-
-[[targets]]
-name = "syncthing"
-host = "192.168.30.36"
-keypath = "/root/.ssh/id_ed25519_syncthing_backup"
-instance = "brun0:syncthing"
-external_path = "/mnt/pve/external/syncthing_backup"
-
-[[targets]]
-name = "leaks"
-instance = "brun0:leaks"
-
-[[targets]]
-name = "monitoring"
-host = "192.168.30.77"
-keypath = "/root/.ssh/id_ed25519_monitoring"
-instance = "brun0:monitoring"
-external_path = "/mnt/pve/external/monitoring_backup"
 
 [[targets]]
 name = "gokr_config"
@@ -51,10 +26,3 @@ external_path = "/mnt/pve/external/worklaptop_backup"
 name = "gokr_perm"
 instance = "brun0:gokr_perm_gmah"
 external_path = "/mnt/pve/external/gokrazy_backup"
-
-[[targets]]
-name = "gocam"
-host = "192.168.30.190"
-keypath = "/root/.ssh/id_ed25519_gocam"
-instance = "brun0:gocam"
-external_path = "/mnt/pve/external/gocam_backup"
