--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,14 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "Launch Package",
             "type": "go",
             "request": "launch",
             "mode": "auto",
             "program": "/home/brun0/src/gbackup/main.go",
+            "env": {"SENDEREMAIL":"1", "SENDERPASS":"1"},
             "args" : ["-config", "/home/brun0/src/gbackup/config.toml"]
         }
     ]
