pinute: added Pinute target

--- a/config.toml
+++ b/config.toml
@@ -18,3 +18,7 @@ external_path = "/mnt/external/worklaptop_backup"
 name = "gokr_perm"
 instance = "brun0:gokr_perm"
 external_path = "/mnt/external/gokrazy_backup"
+
+[[targets]]
+name = "pinute"
+external_path = "/mnt/external/pinute_backup"
